[package]
name = "ig"
version = "0.4.2"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Tetsy Internet Gateway Protocol client"
homepage = "https://core.tetcoin.org"
repository = "https://github.com/tetcoin/tetsy-rust-igd"
documentation = "https://tetcoin.github.io/tetsy-rust-igd/igd/"
readme = "README.md"
keywords = ["ig", "upnp"]
license = "MIT"

[dependencies]
regex = "0.1.41"
xml-rs = "0.1.25"
xmltree = "0.3"
rand = "0.3"

[dependencies.hyper]
version = "0.8.*"
default-features = false
